# llm-ide

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
refactor_mcp/: __init__.py  health_checks.py  logging_config.py  server.py
refactor_mcp/languages/: __init__.py  base_handler.py  css_handler.py  go_handler.py  html_handler.py  javascript_handler.py  language_registry.py  python_handler.py  typescript_handler.py
tests/: __init__.py  conftest.py  test_advanced_operations.py  test_apply_text_edits.py  test_health_checks.py  test_language_registry.py  test_language_registry_advanced.py  test_mcp_smoke.py  test_phase2_operations.py  test_reference_finder_js_ts.py  test_server.py  test_server_advanced.py  test_server_integration.py  test_workspace.py  utils.py
tests/test_language_handlers/: test_css_handler.py  test_go_handler.py  test_go_handler_advanced.py  test_html_handler.py  test_javascript_handler.py  test_javascript_handler_advanced.py  test_python_handler.py  test_python_handler_advanced.py  test_typescript_handler.py  test_typescript_handler_advanced.py
